{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 38,
  "lineage": "0322a1eb-a88c-d53f-5076-3aab1eb5c91a",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:756839542240:instance/i-06c0f976d3cf15259",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c0f976d3cf15259",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0efbaf28d010e1528",
            "private_dns": "ip-10-0-0-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f76fd0a637b8aa1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b51fc9110d144ff0",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e66b41a683708e3d"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.private-a",
            "module.vpc.aws_subnet.private-b",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:756839542240:instance/i-073d7a1d72f7e9291",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073d7a1d72f7e9291",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f025b90073b81475",
            "private_dns": "ip-10-0-0-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8f35139e29a6391",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d012b62d317d625",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e66b41a683708e3d"
            ]
          },
          "dependencies": [
            "module.compute.aws_security_group.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.private-a",
            "module.vpc.aws_subnet.private-b",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:756839542240:loadbalancer/app/alb/f1db85b1349eaea3",
            "arn_suffix": "app/alb/f1db85b1349eaea3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-469867291.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:756839542240:loadbalancer/app/alb/f1db85b1349eaea3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f962897413d223c1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d9f7148cf6b9c72"
              },
              {
                "subnet_id": "subnet-0fe728598e218d325"
              }
            ],
            "subnets": [
              "subnet-05d9f7148cf6b9c72",
              "subnet-0fe728598e218d325"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0320eb463045d7db4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.compute.aws_security_group.alb",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_subnet.public-b",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:756839542240:listener/app/alb/f1db85b1349eaea3/d1385aee9d668e50",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:756839542240:targetgroup/target-group/f79b4f9ee9ab2d33",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:756839542240:listener/app/alb/f1db85b1349eaea3/d1385aee9d668e50",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:756839542240:loadbalancer/app/alb/f1db85b1349eaea3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.aws_lb.alb",
            "module.compute.aws_lb_target_group.front_end",
            "module.compute.aws_security_group.alb",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_subnet.public-b",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:756839542240:targetgroup/target-group/f79b4f9ee9ab2d33",
            "arn_suffix": "targetgroup/target-group/f79b4f9ee9ab2d33",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:756839542240:targetgroup/target-group/f79b4f9ee9ab2d33",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:756839542240:targetgroup/target-group/f79b4f9ee9ab2d33-20221213170739980200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:756839542240:targetgroup/target-group/f79b4f9ee9ab2d33",
            "target_id": "i-06c0f976d3cf15259"
          },
          "dependencies": [
            "module.compute.aws_instance.private-a",
            "module.compute.aws_lb_target_group.front_end",
            "module.compute.aws_security_group.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.private-a",
            "module.vpc.aws_subnet.private-b",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:756839542240:targetgroup/target-group/f79b4f9ee9ab2d33-20221213170741274600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:756839542240:targetgroup/target-group/f79b4f9ee9ab2d33",
            "target_id": "i-073d7a1d72f7e9291"
          },
          "dependencies": [
            "module.compute.aws_instance.private-b",
            "module.compute.aws_lb_target_group.front_end",
            "module.compute.aws_security_group.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.private-a",
            "module.vpc.aws_subnet.private-b",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:security-group/sg-0f962897413d223c1",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0f962897413d223c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-public",
            "name_prefix": "",
            "owner_id": "756839542240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB SG"
            },
            "tags_all": {
              "Name": "ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:security-group/sg-0e66b41a683708e3d",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e66b41a683708e3d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private",
            "name_prefix": "",
            "owner_id": "756839542240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private EC2 SG"
            },
            "tags_all": {
              "Name": "Private EC2 SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d062c849b4a25620",
            "association_id": "eipassoc-0383017df81a5b226",
            "domain": "vpc",
            "id": "eipalloc-0d062c849b4a25620",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fb98ab22525043a0",
            "private_dns": "ip-10-0-0-61.ec2.internal",
            "private_ip": "10.0.0.61",
            "public_dns": "ec2-3-217-236-186.compute-1.amazonaws.com",
            "public_ip": "3.217.236.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:internet-gateway/igw-02e5d6a1c30258644",
            "id": "igw-02e5d6a1c30258644",
            "owner_id": "756839542240",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d062c849b4a25620",
            "connectivity_type": "public",
            "id": "nat-012766a827117ac8e",
            "network_interface_id": "eni-0fb98ab22525043a0",
            "private_ip": "10.0.0.61",
            "public_ip": "3.217.236.186",
            "subnet_id": "subnet-05d9f7148cf6b9c72",
            "tags": {
              "Name": "Demo NAT-Gateway"
            },
            "tags_all": {
              "Name": "Demo NAT-Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:route-table/rtb-06b824774ae9139b5",
            "id": "rtb-06b824774ae9139b5",
            "owner_id": "756839542240",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-012766a827117ac8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private"
            },
            "tags_all": {
              "Name": "rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:route-table/rtb-0b025c7069a1a7cfd",
            "id": "rtb-0b025c7069a1a7cfd",
            "owner_id": "756839542240",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e5d6a1c30258644",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public"
            },
            "tags_all": {
              "Name": "rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026c32eb1bc7e6cf7",
            "route_table_id": "rtb-06b824774ae9139b5",
            "subnet_id": "subnet-0b51fc9110d144ff0"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private-a",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057b45b395193dc80",
            "route_table_id": "rtb-06b824774ae9139b5",
            "subnet_id": "subnet-08d012b62d317d625"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private-b",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f5c11c9b9c9a5d8",
            "route_table_id": "rtb-0b025c7069a1a7cfd",
            "subnet_id": "subnet-05d9f7148cf6b9c72"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public-a",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a1d8705f0f59b3b",
            "route_table_id": "rtb-0b025c7069a1a7cfd",
            "subnet_id": "subnet-0fe728598e218d325"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public-b",
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:subnet/subnet-0b51fc9110d144ff0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b51fc9110d144ff0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756839542240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-a"
            },
            "tags_all": {
              "Name": "private-a"
            },
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:subnet/subnet-08d012b62d317d625",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d012b62d317d625",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756839542240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-b"
            },
            "tags_all": {
              "Name": "private-b"
            },
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:subnet/subnet-05d9f7148cf6b9c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d9f7148cf6b9c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756839542240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:subnet/subnet-0fe728598e218d325",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe728598e218d325",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756839542240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b"
            },
            "vpc_id": "vpc-0320eb463045d7db4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756839542240:vpc/vpc-0320eb463045d7db4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-02a1d173d309ef028",
            "default_route_table_id": "rtb-07640046734bd1d54",
            "default_security_group_id": "sg-0b4ec4375387626ef",
            "dhcp_options_id": "dopt-08f7cb819a183d225",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0320eb463045d7db4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07640046734bd1d54",
            "owner_id": "756839542240",
            "tags": {
              "Name": "day1"
            },
            "tags_all": {
              "Name": "day1"
            }
          }
        }
      ]
    }
  ]
}